samples/_failures_safe/1761176403_48633d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02738048.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_02738048.c:169:5: error: expected expression at end of input
  169 |     return parser_parse_expression(&
      |     ^~~~~~
./samples/SAFE/__tmp_02738048.c:169:5: error: expected declaration or statement at end of input
